# HarstemsAunt-SC2-AI

./: Test  config.yml  pyproject.toml  readME.md  requirements.txt  run.py  setup.py
.github/workflows/: ladder_zip.yml  pylint.yml
HarstemsAunt/: common.py  eval.py  macro.py  main.py
HarstemsAunt/actions/: build_army.py  build_supply.py  chronoboosting.py  expand.py
HarstemsAunt/debugTools/: unit_lable.py  unit_vision.py
HarstemsAunt/macro/: build_army.py  game_start.py  upgrade.py
HarstemsAunt/utils/: get_build_pos.py  handle_alerts.py  in_proximity.py
actions/: abilliies.py  build_army.py  build_structure.py  build_supply.py  expand.py  speedmining.py  unit_controll.py
analytics/: HarstemsAunt.ipynb  _config.yml  _toc.yml
analytics/Devlogs/: Devlog_0.ipynb  Devlog_2.ipynb
analytics/analytics/: Maps.ipynb
army_group/: army_group.py
benchmarks/: benchmark.py  common.py  enemy_behavior.py  micro_benchmark.py  notebook.ipynb  readME.md  recorder.py  result.py  scenario.py  szenario.py  utils.py
benchmarks/configs/: ProtossAir.json  benchmark.json  config.json  default.json  immortal.json  short_test.json  stalker.json
bot/: production_buffer.py  run.py  setup.py  targeting.py
bot/HarstemsAunt/: army_group.py  build_order.py  builds.py  (+15 more)
bot_validation/: validate_bot.py
debugTools/: debug_build_pos.py  gameinfo.py  unit_range.py
dev_notebooks/: unit_value.ipynb
macro/: game_start.py  infrastructure.py  upgrade.py
map_vision/: map_sector.py  thread_map.py
scripts/: create_ladder_zip.py
utils/: get_army_target.py  get_warp_in_pos.py
(+89 files in other folders)
